<resources>
    <string name="app_name">kotlin-rss</string>

    <string name="no_flux">Please add a RSS flux</string>
    <string name="no_result">No result.</string>

    <string name="add_flux_title">Flux creation</string>
    <string name="edit_flux_title">Flux edit</string>
    <string name="add_and_edit_flux_name_title">Flux name</string>
    <string name="add_flux_name_caption">Name</string>
    <string name="add_and_edit_flux_uri_title">Flux URI</string>
    <string name="add_flux_uri_caption">URI (https://www.lemonde.fr/rss/une.xml)</string>
    <string name="add_flux_add_button">ADD</string>
    <string name="delete_flux_delete_button">DELETE</string>
    <string name="edit_flux_edit_button">SAVE CHANGES</string>


    <string name="filter_menu_title">Filtering</string>
    <string name="filter_reset_button">RESET</string>
    <string name="filter_filter_button">FILTER</string>
    <string name="filter_dof">Display only favorites</string>

    <string name="default_edit_title">Le Monde</string>
    <string name="default_edit_uri">https://www.lemonde.fr/rss/une.xml</string>

    <string name="nav_filter_text">FILTER</string>
    <string name="logo_desc">Le logo de notre application</string>
    <string name="ic_add_desc">Bouton d ajout de flux</string>
    <string name="ic_arrow_drop_desc">Icon fleche vers le bas</string>
    <string name="ic_edit_desc">Bouton d edition du flux</string>
    <string name="nav_edit_button">EDIT</string>

    <string name="category_title">Category</string>

    <string name="catego_finance">FINANCE</string>
    <string name="catego_sport">SPORT</string>
    <string name="catego_health">HEALTH</string>
    <string name="catego_cs">COMPUTER SCIENCE</string>
    <string name="catego_movie">MOVIE</string>
    <string name="catego_music">MUSIC</string>
    <string name="catego_politics">POLITICS</string>
    <string name="catego_science">SCIENCE</string>
    <string name="catego_people">PEOPLE</string>

    <string name="back">BACK</string>
</resources>