<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_add_flux"
        android:layout_width="172dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_flux_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/include"
        layout="@layout/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_flux_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:labelFor="@id/title_add_flux"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/flux_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_and_edit_flux_name_title" />

        <EditText
            android:id="@+id/flux_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="15"
            android:hint="@string/add_and_edit_flux_name_title"
            android:inputType="text"
            android:labelFor="@id/flux_name_title"
            android:text="@string/add_flux_name_caption" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_flux_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="270dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/flux_uri_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_and_edit_flux_uri_title" />

        <EditText
            android:id="@+id/flux_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="uri"
            android:ems="15"
            android:hint="@string/add_flux_title"
            android:inputType="textUri"
            android:labelFor="@id/flux_uri_title"
            android:text="@string/add_flux_uri_caption" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/categor_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="375dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/category_title"
            app:drawableEndCompat="@drawable/ic_arrow_drop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/catego"
            layout="@layout/category"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/add_flux_add_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/add_flux_add_button"
        android:textSize="16sp"
        android:background="@drawable/gradient_button_category"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>