<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_add_flux"
        android:layout_width="172dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit_flux_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/include"
        layout="@layout/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_flux_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:labelFor="@id/title_add_flux"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/flux_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_and_edit_flux_name_title" />

        <EditText
            android:id="@+id/flux_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text"
            android:labelFor="@id/flux_name_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_flux_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="270dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/flux_uri_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_and_edit_flux_uri_title" />

        <EditText
            android:id="@+id/flux_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textUri"
            android:labelFor="@id/flux_uri_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_or_delete_flux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="536dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/delete_flux_delete_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/delete_flux_delete_button"
            android:textSize="16sp"
            app:backgroundTint="@color/main_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/edit_flux_edit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:text="@string/edit_flux_edit_button"
            android:textSize="16sp"
            app:backgroundTint="@color/main_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>